Rust/tests/Programs/fail_compile/005_global_access_inside_fn.to
# expect_error: Cannot assign to top-level variable

let g = 9
fn write_global() {
  g = 10
  return g
}
print write_global()
